# contrib

./: .gitignore  README.rst  clouds.yaml.sample  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cinder/: quota-sync.py
elasticsearch/curator/: run.sh
elasticsearch/curator/configuration/: curator.yml
etc/: expiration-deletion.yml.j2  expiration-reminder.yml.j2  quotaclasses.yml
generic/: create-project.py  create-test-project.py  expire-project-resources.py  list-orphaned-resources.py  list-outdated-resources.py  manage-project-resources.py
glance/: share-image.py
keystone/: assign-endpoint-group-to-project.py  create-and-list-endpoint-groups.py  create-endpoint-groups.py  metadata-assign-endpoint-group-to-project.py
monitoring/: .gitignore  check_cluster_services.env.sample  check_cluster_services.sh
neutron/: check-dhcp-agents.py  cleanup-ns-metadata-proxy-logfiles.sh
nova/: instance-spawner.py  quota-sync.py
scripts/: run-cinder-quota-sync.sh  run-expire-project-resources.sh  run-nova-quota-sync.sh
shade/: glance-share-image.py  instance-spawner.py  list-orphaned-resources.py
templates/: outdated-resource.yml.j2
tests/: simple.py
