[metadata]
name = contrib
summary = This is a place for various tools.
description-file = README.rst
author = Betacloud Solutions GmbH
author-email = info@betacloud.io
home-page = https://www.betacloud.io
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
